--- a/covid_api/templates/simple.html
+++ b/covid_api/templates/simple.html
@@ -292,6 +292,7 @@
                             <option value=gist_earth>Earth</option>
                             <option value=ocean>Ocean</option>
                             <option value=terrain>Terrain</option>
+                            <option value=custom_cropmonitor>Crop Monitor</option>
                         </select>
                         <div class='select-arrow color-black'></div>
                     </div>
